# full-stack-fastapi-template

backend/: pyproject.toml
