[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",  # TODO: review
    "python-multipart>=0.0.21,<1.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "pydantic>2.0",
    "emails>=0.6,<1.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.12.1,<2.0.0",
    "httpx>=0.25.1,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "sqlalchemy>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3,<8.0.0",
    "mypy>=1.19.1,<2.0.0",
    "ruff>=0.14.13,<1.0.0",
    "prek>=0.2.30,<1.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
    "coverage>=7.4.3,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
[tool.ruff]
target-version = "py312"

line-length = 320
indent-width = 4

exclude = ["alembic", "venv", ".venv"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]

fixable = [
    "E301", # blank-line-between-methods
    "E302", # blank-lines-top-level
    "E303", # too-many-blank-lines
    "E304", # blank-line-after-decorator
    "E305", # blank-lines-after-function-or-class
    "E306", # blank-lines-before-nested-definition
]

# Extra selects from your file; redundant with select=["ALL"], but harmless to keep.
extend-select = [
    "D300", # triple-single-quotes
    "Q000", # bad-quotes-inline-string
    "Q001", # bad-quotes-multiline-string
    "Q002", # bad-quotes-docstring
    "Q003", # avoidable-escaped-quote
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
]

# Combined ignores: FastAPI template + your other project.
ignore = [
    # --- From FastAPI template ---
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # allow raising exceptions without from e
    "ARG001", # unused function argument (template selected it; with ALL you'd ignore or enforce; keeping template behavior)

    # --- From your other project ---
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-public-nested-class
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    "D202", # blank-line-after-function
    "D203", # incorrect-blank-line-before-class
    "D205", # missing-blank-line-after-summary
    "D206", # docstring-tab-indentation
    "D212", # multi-line-summary-first-line
    "D401", # non-imperative-mood

    "ERA001", # commented out code
    "SIM108", # force ternary operator usage
    "DTZ005", # forced usage of tz on datetime.now()

    "E111", # indentation-with-invalid-multiple
    "E114", # indentation-with-invalid-multiple-comment
    "E117", # over-indented

    "T201", # print keyword

    "RUF012", # mutable-class-default (you noted: keep for now)
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    "FIX002", # line-contains-todo

    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs

    "COM812", # missing-trailing-comma (recommended to ignore)
    "RET503", # implicit-return
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))|args|kwargs$"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
